--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,9 @@ body {
 
 @layer utilities {
   /* Header */
+  .header {
+    @apply flex flex-wrap justify-between items-center mx-auto max-w-screen-xl px-12 py-4 rounded-[20px] bg-[#FFFFFF99];
+  }
   .donate-btn {
     @apply bg-buttons-cta-active hover:bg-buttons-cta-hover active:bg-primary-700 active:text-font-white text-medium1 text-font-primary font-helv rounded-lg px-6 py-4;
   }
