--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,9 @@ body {
   .center {
     @apply mx-auto w-full max-w-[var(--max-width)];
   }
+  .preheader {
+    @apply text-preheader text-font-accent uppercase;
+  }
 
   /* Header */
 
@@ -86,6 +89,15 @@ body {
   }
   .embla-slider-dot {
     @apply w-3 h-3 rounded-full transition-all;
+  }
+
+  /* Sponsors */
+
+  .sponsors {
+    @apply flex flex-col gap-y-10 py-14 px-24;
+  }
+  .sponsors-logos {
+    @apply flex items-center justify-center gap-x-20;
   }
 
 }
