--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,16 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
+
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
 }
+}
+
 
 @layer utilities {
   /* Main */
@@ -104,6 +113,24 @@ body {
 
   .partners-text {
     @apply flex flex-col gap-y-4 max-w-[524px];
+  }
+  .partners-form {
+    @apply flex flex-col gap-y-6;
+  }
+
+  /* Modal */
+  
+  .modal-wrapper {
+    @apply bg-[#0000005E] w-[100vw] h-[100vh] fixed top-[0px];
+  }
+  .modal-position {
+    @apply fixed left-[50%] top-[50%] -translate-x-[50%] -translate-y-[50%];
+  }
+  .modal {
+    @apply w-[400px] rounded-2xl bg-grey-50 p-6 flex flex-col gap-y-2;
+  }
+  .modal-icon {
+    @apply w-[48px] h-[48px] rounded-full flex items-center justify-center border-8;
   }
 
 }
