fixed path for icons in global.css

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -167,7 +167,7 @@ body {
     left: 40px;
     width: 104px;
     height: 104px;
-    background: url('/icons/NewsQuoteBottom.svg') no-repeat;
+    background: url('/../icons/NewsQuoteBottom.svg') no-repeat;
   }
   .NewsQuoteBlock__inner:before {
     content: '';
@@ -177,5 +177,5 @@ body {
     right: 40px;
     width: 104px;
     height: 104px;
-    background: url('/icons/NewsQuoteTop.svg') no-repeat;
+    background: url('/../icons/NewsQuoteTop.svg') no-repeat;
   }
