--- a/styles/payment.css
+++ b/styles/payment.css
@@ -38,5 +38,26 @@ body {
     .header {
       @apply flex justify-between items-center mx-auto w-full max-w-[calc(100%-30px)] md:px-12 px-5 py-4  ;
     }
+
+    .finish-wrapper {
+      @apply flex flex-col min-h-screen;
+    }
+
+    .finish-content {
+      @apply flex-1;
+    }
+
+     /* Footer */
+
+  .footer {
+    @apply  bg-background-secondary;
+  }
+  .footer__inner {
+    @apply flex justify-between items-center mx-auto w-full max-w-[var(--max-width)] px-12 py-12
+  }
+  .footer-links {
+    @apply flex flex-col gap-y-4 text-large font-helv;
+  }
+
     
 }
