--- a/styles/payment.css
+++ b/styles/payment.css
@@ -32,7 +32,7 @@ body {
   @layer utilities {
    
     .payments-wrapper {
-        @apply bg-grey-50 rounded-2xl shadow-custom py-[72px] px-[106px] mt-[70px] flex flex-col gap-y-[40px];
+        @apply bg-grey-50 rounded-2xl shadow-custom py-[72px] px-[106px] my-[70px] flex flex-col gap-y-[40px];
     }
    
     .header {
