--- a/styles/admin.css
+++ b/styles/admin.css
@@ -89,3 +89,47 @@ body {
   z-index: 99;
   cursor: pointer;
 }
+
+
+ /* Main Slider */
+
+  .embla {
+    @apply max-w-[var(--max-width)] mx-auto;
+    --slide-size: 824px;
+  }
+  .embla-slide {
+    @apply flex-none;
+    transform: translate3d(0, 0, 0);
+    flex: 0 0 var(--slide-size);
+    min-width: 0;
+  }
+  .embla__slide {
+    flex-shrink: 0;
+    width: 360px;
+    transition: all 0.3s ease;
+    cursor: pointer;
+  }
+  .embla-slide-img {
+    @apply w-full h-[544px] object-cover transition-all duration-300;
+  }
+  .embla-slide-text-container {
+    @apply absolute inset-0 flex items-center justify-center 
+    bg-[#0F1B4080] 
+    opacity-0 transition-all duration-300 cursor-pointer;
+  }
+  .embla-slide-inner-text {
+    @apply flex flex-col gap-y-4 w-[544px] translate-x-[-84px] translate-y-[119px];
+  }
+  .embla-slide-btn {
+    @apply absolute top-1/2 w-[60px] h-[60px] -translate-y-1/2 p-3 bg-primary-400 
+    opacity-0 group-hover:opacity-100 transition rounded-full z-10;
+  }
+  .embla-slider-dots {
+    @apply absolute bottom-6 left-1/2 -translate-x-1/2 flex space-x-6 bg-white bg-opacity-40 py-1.5 px-[19.5px] rounded-[16px];
+  }
+  .embla-slider-dot {
+    @apply w-3 h-3 rounded-full transition-all;
+  }
+  .slide-btn {
+    @apply absolute top-1/2 w-[60px] h-[60px] opacity-70 -translate-y-1/2 p-3 bg-primary-400 transition rounded-full z-20;
+  }
