--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,7 +52,7 @@ body {
   } */
   
   .donate-btn {
-    @apply bg-primary-50 hover:bg-buttons-cta-hover active:bg-buttons-cta-active duration-500 text-font-white text-medium1 font-helv rounded-lg px-[84.5px] py-4;
+    @apply bg-buttons-cta-default hover:bg-buttons-cta-hover active:bg-buttons-cta-active duration-500 text-font-white text-medium1 font-helv rounded-lg px-[84.5px] py-4;
   }
   .language-btn {
     @apply text-font-primary inline-flex w-full items-center gap-x-2 p-4 text-sm font-helv text-medium1;
