--- a/styles/globals.css
+++ b/styles/globals.css
@@ -282,9 +282,12 @@ html {
 }
 
 
-.ul li {
+ul li {
   position: relative;
   padding-left: 40px;
+}
+ul li:not(:last-child) {
+  margin-bottom: 15px;
 }
 ul li:before {
   position: absolute;
